fixed overflow issue of SignUp dialogbox

--- a/styles.css
+++ b/styles.css
@@ -1482,6 +1482,9 @@ footer {
   width: 90%;
   max-width: 400px;
   padding: 30px;
+  max-height: 90vh;
+  overflow-y: auto;
+
 }
 
 .user-tabs {
